# kodekalender

./: .gitignore  README.md  go.mod  go.sum  main.go
2018/: README.md  go.mod
2018/day02/: README.md  main.go
2018/day03/: README.md  main.go
2018/day04/: README.md
2018/day06/: main.go
2018/day07/: README.md
2018/day08/: input-dolls.txt
2018/day09/: input-hashchain.json  main.go
2018/day10/: README.md
2018/day12/: emoji  main.go
2018/day13/: README.md
2018/day14/: main.go
2018/day15/: main.go
2018/day16/: README.md  main.go
2018/day17/: main.go
2018/day18/: main.go
2018/day19/: README.md
2018/day20/: README.md  main.go
2018/day21/: main.go
2018/day22/: README.md  main.go
2018/day23/: input-fnr.txt
2019/: .gitignore
2019/day01/: README.md  main.rs
2019/day02/: README.md  main.rs
2019/day03/: Cargo.toml  main.rs
2019/day10/: Cargo.toml  main.rs
2019/day13/: Cargo.toml  main.rs
2019/day18/: Cargo.toml  main.rs
2019/day22/: Cargo.toml  main.rs
day01/: main.go
day02/: README.md  main.go
day04/: README.md
day05/: README.md  main.go
day07/: README.md  main.go
day08/: README.md  main.go
day09/: README.md  main.go
day10/: main.go
day11/: README.md  main.go
day12/: README.md
day13/: main.go
day14/: README.md  input-bounding-crisscross.txt
day15/: README.md
day17/: input-reiserute.txt
day18/: input-rpslog.txt  main.go
day19/: main.go
day20/: README.md
day21/: bb  concurrent  day21  tmp  win
day22/: README.md  input-luke-22.txt
day23/: README.md  main.go
day24/: README.md  main.go
(+38 files in other folders)
