[package]
name = "day10"
version = "0.1.0"
authors = ["Kasper Furnes Bernhoff <kb@kfbi.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"                   # Date and time library for Rust

[[bin]]
name = "day10"
path = "main.rs"
