[package]
name = "day13"
version = "0.1.0"
authors = ["Kasper Furnes Bernhoff <kb@kfbi.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.0"                           # JSON implementation in Rust

[[bin]]
name = "day13"
path = "main.rs"
