[package]
name = "day18"
version = "0.1.0"
authors = ["Kasper Furnes Bernhoff <kb@kfbi.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.1"               # Fast CSV parsing with support for serde.
[[bin]]
name = "day18"
path = "main.rs"
