[package]
name = "day22"
version = "0.1.0"
authors = ["Kasper Furnes Bernhoff <kb@kfbi.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
lazy_static = "1.4.0"

[[bin]]
name = "day22"
path = "main.rs"
